--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
+pydantic[email]==2.5.0  # Includes email-validator for EmailStr validation
 python-dotenv==1.0.0
 
 # Firebase
@@ -18,6 +19,7 @@ Pillow==10.1.0
 numpy==1.26.3  # Updated for compatibility
 pandas==2.1.4
 scikit-learn==1.3.2
+plotly==6.5.0  # For interactive visualizations in forecast routes
 
 # OR-Tools for Route Optimization
 ortools==9.8.3296
